antlr/src/main/antlr4/org/apache/iotdb/db/qp/sql/gen/IdentifierParser.java
// Generated from /Users/ht/Documents/HTHou/timechodb/antlr/src/main/antlr4/org/apache/iotdb/db/qp/sql/IdentifierParser.g4 by ANTLR 4.12.0
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class IdentifierParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.12.0", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WS=1, ADD=2, AFTER=3, ALIAS=4, ALIGN=5, ALIGNED=6, ALL=7, ALTER=8, ANY=9, 
		APPEND=10, AS=11, ASC=12, ATTRIBUTES=13, AUTO=14, BEFORE=15, BEGIN=16, 
		BLOCKED=17, BOUNDARY=18, BY=19, CACHE=20, CAST=21, CHILD=22, CLEAR=23, 
		CLUSTER=24, COLLECTOR=25, CONCAT=26, CONDITION=27, CONFIGNODES=28, CONFIGURATION=29, 
		CONNECTOR=30, CONTINUOUS=31, CONTAIN=32, COUNT=33, CQ=34, CQS=35, CREATE=36, 
		DATA=37, DATABASE=38, DATABASES=39, DATANODEID=40, DATANODES=41, DEACTIVATE=42, 
		DEBUG=43, DELETE=44, DESC=45, DESCRIBE=46, DETAILS=47, DEVICE=48, DEVICES=49, 
		DISABLE=50, DISCARD=51, DROP=52, ELAPSEDTIME=53, END=54, ENDTIME=55, EVERY=56, 
		EXPLAIN=57, FILL=58, FILE=59, FIRST=60, FLUSH=61, FOR=62, FROM=63, FULL=64, 
		FUNCTION=65, FUNCTIONS=66, GLOBAL=67, GRANT=68, GROUP=69, HAVING=70, INDEX=71, 
		INFO=72, INSERT=73, INTO=74, KILL=75, LABEL=76, LAST=77, LATEST=78, LEVEL=79, 
		LIKE=80, LIMIT=81, LINEAR=82, LINK=83, LIST=84, LOAD=85, LOCAL=86, LOCK=87, 
		MERGE=88, METADATA=89, MIGRATE=90, MODEL=91, MODELS=92, NODEID=93, NODES=94, 
		NONE=95, NOW=96, NULLS=97, OF=98, OFF=99, OFFSET=100, ON=101, ORDER=102, 
		ONSUCCESS=103, PARTITION=104, PASSWORD=105, PATHS=106, PIPE=107, PIPES=108, 
		PIPESINK=109, PIPESINKS=110, PIPESINKTYPE=111, PIPEPLUGIN=112, PIPEPLUGINS=113, 
		POLICY=114, PREVIOUS=115, PREVIOUSUNTILLAST=116, PRIVILEGES=117, PROCESSLIST=118, 
		PROCESSOR=119, PROPERTY=120, PRUNE=121, QUERIES=122, QUERY=123, QUERYID=124, 
		QUOTA=125, RANGE=126, READONLY=127, REGEXP=128, REGION=129, REGIONID=130, 
		REGIONS=131, REMOVE=132, RENAME=133, RESAMPLE=134, RESOURCE=135, REPLACE=136, 
		REVOKE=137, ROLE=138, ROOT=139, ROUND=140, RUNNING=141, SCHEMA=142, SELECT=143, 
		SERIESSLOTID=144, SESSION=145, SET=146, SETTLE=147, SGLEVEL=148, SHOW=149, 
		SLIMIT=150, SOFFSET=151, SPACE=152, STORAGE=153, START=154, STARTTIME=155, 
		STATEFUL=156, STATELESS=157, STATEMENT=158, STOP=159, SUBSTRING=160, SYSTEM=161, 
		TAGS=162, TASK=163, TEMPLATE=164, TEMPLATES=165, THROTTLE=166, TIME=167, 
		TIMEOUT=168, TIMESERIES=169, TIMESLOTID=170, TIMEPARTITION=171, TIMESTAMP=172, 
		TO=173, TOLERANCE=174, TOP=175, TRACING=176, TRAILS=177, TRIGGER=178, 
		TRIGGERS=179, TTL=180, UNLINK=181, UNLOAD=182, UNSET=183, UPDATE=184, 
		UPSERT=185, URI=186, USED=187, USER=188, USING=189, VALUES=190, VARIABLES=191, 
		VARIATION=192, VERIFY=193, VERSION=194, VIEW=195, WATERMARK_EMBEDDING=196, 
		WHERE=197, WITH=198, WITHOUT=199, WRITABLE=200, CASE=201, WHEN=202, THEN=203, 
		ELSE=204, PRIVILEGE_VALUE=205, SET_STORAGE_GROUP=206, DELETE_STORAGE_GROUP=207, 
		CREATE_DATABASE=208, DELETE_DATABASE=209, CREATE_TIMESERIES=210, INSERT_TIMESERIES=211, 
		READ_TIMESERIES=212, DELETE_TIMESERIES=213, ALTER_TIMESERIES=214, CREATE_USER=215, 
		DELETE_USER=216, MODIFY_PASSWORD=217, LIST_USER=218, GRANT_USER_PRIVILEGE=219, 
		REVOKE_USER_PRIVILEGE=220, GRANT_USER_ROLE=221, REVOKE_USER_ROLE=222, 
		CREATE_ROLE=223, DELETE_ROLE=224, LIST_ROLE=225, GRANT_ROLE_PRIVILEGE=226, 
		REVOKE_ROLE_PRIVILEGE=227, CREATE_FUNCTION=228, DROP_FUNCTION=229, CREATE_TRIGGER=230, 
		DROP_TRIGGER=231, START_TRIGGER=232, STOP_TRIGGER=233, CREATE_CONTINUOUS_QUERY=234, 
		DROP_CONTINUOUS_QUERY=235, SHOW_CONTINUOUS_QUERIES=236, SCHEMA_REPLICATION_FACTOR=237, 
		DATA_REPLICATION_FACTOR=238, TIME_PARTITION_INTERVAL=239, SCHEMA_REGION_GROUP_NUM=240, 
		DATA_REGION_GROUP_NUM=241, APPLY_TEMPLATE=242, UPDATE_TEMPLATE=243, READ_TEMPLATE=244, 
		READ_TEMPLATE_APPLICATION=245, MINUS=246, PLUS=247, DIV=248, MOD=249, 
		OPERATOR_DEQ=250, OPERATOR_SEQ=251, OPERATOR_GT=252, OPERATOR_GTE=253, 
		OPERATOR_LT=254, OPERATOR_LTE=255, OPERATOR_NEQ=256, OPERATOR_BETWEEN=257, 
		OPERATOR_IS=258, OPERATOR_IN=259, OPERATOR_AND=260, OPERATOR_OR=261, OPERATOR_NOT=262, 
		OPERATOR_CONTAINS=263, DOT=264, COMMA=265, SEMI=266, STAR=267, DOUBLE_STAR=268, 
		LR_BRACKET=269, RR_BRACKET=270, LS_BRACKET=271, RS_BRACKET=272, DOUBLE_COLON=273, 
		STRING_LITERAL=274, DURATION_LITERAL=275, DATETIME_LITERAL=276, INTEGER_LITERAL=277, 
		EXPONENT_NUM_PART=278, BOOLEAN_LITERAL=279, NULL_LITERAL=280, NAN_LITERAL=281, 
		ID=282, QUOTED_ID=283, DEVICEID=284;
	public static final int
		RULE_identifier = 0, RULE_keyWords = 1;
	private static String[] makeRuleNames() {
		return new String[] {
			"identifier", "keyWords"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, "'-'", "'+'", "'/'", "'%'", "'=='", 
			"'='", "'>'", "'>='", "'<'", "'<='", null, null, null, null, null, null, 
			null, null, "'.'", "','", "';'", "'*'", "'**'", "'('", "')'", "'['", 
			"']'", "'::'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "WS", "ADD", "AFTER", "ALIAS", "ALIGN", "ALIGNED", "ALL", "ALTER", 
			"ANY", "APPEND", "AS", "ASC", "ATTRIBUTES", "AUTO", "BEFORE", "BEGIN", 
			"BLOCKED", "BOUNDARY", "BY", "CACHE", "CAST", "CHILD", "CLEAR", "CLUSTER", 
			"COLLECTOR", "CONCAT", "CONDITION", "CONFIGNODES", "CONFIGURATION", "CONNECTOR", 
			"CONTINUOUS", "CONTAIN", "COUNT", "CQ", "CQS", "CREATE", "DATA", "DATABASE", 
			"DATABASES", "DATANODEID", "DATANODES", "DEACTIVATE", "DEBUG", "DELETE", 
			"DESC", "DESCRIBE", "DETAILS", "DEVICE", "DEVICES", "DISABLE", "DISCARD", 
			"DROP", "ELAPSEDTIME", "END", "ENDTIME", "EVERY", "EXPLAIN", "FILL", 
			"FILE", "FIRST", "FLUSH", "FOR", "FROM", "FULL", "FUNCTION", "FUNCTIONS", 
			"GLOBAL", "GRANT", "GROUP", "HAVING", "INDEX", "INFO", "INSERT", "INTO", 
			"KILL", "LABEL", "LAST", "LATEST", "LEVEL", "LIKE", "LIMIT", "LINEAR", 
			"LINK", "LIST", "LOAD", "LOCAL", "LOCK", "MERGE", "METADATA", "MIGRATE", 
			"MODEL", "MODELS", "NODEID", "NODES", "NONE", "NOW", "NULLS", "OF", "OFF", 
			"OFFSET", "ON", "ORDER", "ONSUCCESS", "PARTITION", "PASSWORD", "PATHS", 
			"PIPE", "PIPES", "PIPESINK", "PIPESINKS", "PIPESINKTYPE", "PIPEPLUGIN", 
			"PIPEPLUGINS", "POLICY", "PREVIOUS", "PREVIOUSUNTILLAST", "PRIVILEGES", 
			"PROCESSLIST", "PROCESSOR", "PROPERTY", "PRUNE", "QUERIES", "QUERY", 
			"QUERYID", "QUOTA", "RANGE", "READONLY", "REGEXP", "REGION", "REGIONID", 
			"REGIONS", "REMOVE", "RENAME", "RESAMPLE", "RESOURCE", "REPLACE", "REVOKE", 
			"ROLE", "ROOT", "ROUND", "RUNNING", "SCHEMA", "SELECT", "SERIESSLOTID", 
			"SESSION", "SET", "SETTLE", "SGLEVEL", "SHOW", "SLIMIT", "SOFFSET", "SPACE", 
			"STORAGE", "START", "STARTTIME", "STATEFUL", "STATELESS", "STATEMENT", 
			"STOP", "SUBSTRING", "SYSTEM", "TAGS", "TASK", "TEMPLATE", "TEMPLATES", 
			"THROTTLE", "TIME", "TIMEOUT", "TIMESERIES", "TIMESLOTID", "TIMEPARTITION", 
			"TIMESTAMP", "TO", "TOLERANCE", "TOP", "TRACING", "TRAILS", "TRIGGER", 
			"TRIGGERS", "TTL", "UNLINK", "UNLOAD", "UNSET", "UPDATE", "UPSERT", "URI", 
			"USED", "USER", "USING", "VALUES", "VARIABLES", "VARIATION", "VERIFY", 
			"VERSION", "VIEW", "WATERMARK_EMBEDDING", "WHERE", "WITH", "WITHOUT", 
			"WRITABLE", "CASE", "WHEN", "THEN", "ELSE", "PRIVILEGE_VALUE", "SET_STORAGE_GROUP", 
			"DELETE_STORAGE_GROUP", "CREATE_DATABASE", "DELETE_DATABASE", "CREATE_TIMESERIES", 
			"INSERT_TIMESERIES", "READ_TIMESERIES", "DELETE_TIMESERIES", "ALTER_TIMESERIES", 
			"CREATE_USER", "DELETE_USER", "MODIFY_PASSWORD", "LIST_USER", "GRANT_USER_PRIVILEGE", 
			"REVOKE_USER_PRIVILEGE", "GRANT_USER_ROLE", "REVOKE_USER_ROLE", "CREATE_ROLE", 
			"DELETE_ROLE", "LIST_ROLE", "GRANT_ROLE_PRIVILEGE", "REVOKE_ROLE_PRIVILEGE", 
			"CREATE_FUNCTION", "DROP_FUNCTION", "CREATE_TRIGGER", "DROP_TRIGGER", 
			"START_TRIGGER", "STOP_TRIGGER", "CREATE_CONTINUOUS_QUERY", "DROP_CONTINUOUS_QUERY", 
			"SHOW_CONTINUOUS_QUERIES", "SCHEMA_REPLICATION_FACTOR", "DATA_REPLICATION_FACTOR", 
			"TIME_PARTITION_INTERVAL", "SCHEMA_REGION_GROUP_NUM", "DATA_REGION_GROUP_NUM", 
			"APPLY_TEMPLATE", "UPDATE_TEMPLATE", "READ_TEMPLATE", "READ_TEMPLATE_APPLICATION", 
			"MINUS", "PLUS", "DIV", "MOD", "OPERATOR_DEQ", "OPERATOR_SEQ", "OPERATOR_GT", 
			"OPERATOR_GTE", "OPERATOR_LT", "OPERATOR_LTE", "OPERATOR_NEQ", "OPERATOR_BETWEEN", 
			"OPERATOR_IS", "OPERATOR_IN", "OPERATOR_AND", "OPERATOR_OR", "OPERATOR_NOT", 
			"OPERATOR_CONTAINS", "DOT", "COMMA", "SEMI", "STAR", "DOUBLE_STAR", "LR_BRACKET", 
			"RR_BRACKET", "LS_BRACKET", "RS_BRACKET", "DOUBLE_COLON", "STRING_LITERAL", 
			"DURATION_LITERAL", "DATETIME_LITERAL", "INTEGER_LITERAL", "EXPONENT_NUM_PART", 
			"BOOLEAN_LITERAL", "NULL_LITERAL", "NAN_LITERAL", "ID", "QUOTED_ID", 
			"DEVICEID"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "IdentifierParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public IdentifierParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IdentifierContext extends ParserRuleContext {
		public KeyWordsContext keyWords() {
			return getRuleContext(KeyWordsContext.class,0);
		}
		public TerminalNode DURATION_LITERAL() { return getToken(IdentifierParser.DURATION_LITERAL, 0); }
		public TerminalNode ID() { return getToken(IdentifierParser.ID, 0); }
		public TerminalNode QUOTED_ID() { return getToken(IdentifierParser.QUOTED_ID, 0); }
		public IdentifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IdentifierParserListener ) ((IdentifierParserListener)listener).enterIdentifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IdentifierParserListener ) ((IdentifierParserListener)listener).exitIdentifier(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IdentifierParserVisitor ) return ((IdentifierParserVisitor<? extends T>)visitor).visitIdentifier(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IdentifierContext identifier() throws RecognitionException {
		IdentifierContext _localctx = new IdentifierContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_identifier);
		try {
			setState(8);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ADD:
			case AFTER:
			case ALIAS:
			case ALIGN:
			case ALIGNED:
			case ALL:
			case ALTER:
			case ANY:
			case APPEND:
			case AS:
			case ASC:
			case ATTRIBUTES:
			case AUTO:
			case BEFORE:
			case BEGIN:
			case BLOCKED:
			case BOUNDARY:
			case BY:
			case CACHE:
			case CAST:
			case CHILD:
			case CLEAR:
			case CLUSTER:
			case CONCAT:
			case CONDITION:
			case CONFIGNODES:
			case CONFIGURATION:
			case CONTINUOUS:
			case CONTAIN:
			case COUNT:
			case CQ:
			case CQS:
			case CREATE:
			case DATA:
			case DATABASE:
			case DATABASES:
			case DATANODEID:
			case DATANODES:
			case DEACTIVATE:
			case DEBUG:
			case DELETE:
			case DESC:
			case DESCRIBE:
			case DETAILS:
			case DEVICE:
			case DEVICES:
			case DISABLE:
			case DISCARD:
			case DROP:
			case ELAPSEDTIME:
			case END:
			case ENDTIME:
			case EVERY:
			case EXPLAIN:
			case FILL:
			case FILE:
			case FLUSH:
			case FOR:
			case FROM:
			case FULL:
			case FUNCTION:
			case FUNCTIONS:
			case GLOBAL:
			case GRANT:
			case GROUP:
			case HAVING:
			case INDEX:
			case INFO:
			case INSERT:
			case INTO:
			case KILL:
			case LABEL:
			case LAST:
			case LATEST:
			case LEVEL:
			case LIKE:
			case LIMIT:
			case LINEAR:
			case LINK:
			case LIST:
			case LOAD:
			case LOCAL:
			case LOCK:
			case MERGE:
			case METADATA:
			case MODEL:
			case MODELS:
			case NODES:
			case NONE:
			case NOW:
			case OF:
			case OFF:
			case OFFSET:
			case ON:
			case ORDER:
			case ONSUCCESS:
			case PARTITION:
			case PASSWORD:
			case PATHS:
			case PIPE:
			case PIPES:
			case PIPESINK:
			case PIPESINKS:
			case PIPESINKTYPE:
			case PIPEPLUGIN:
			case PIPEPLUGINS:
			case POLICY:
			case PREVIOUS:
			case PREVIOUSUNTILLAST:
			case PRIVILEGES:
			case PROCESSLIST:
			case PROPERTY:
			case PRUNE:
			case QUERIES:
			case QUERY:
			case QUERYID:
			case QUOTA:
			case RANGE:
			case READONLY:
			case REGEXP:
			case REGIONID:
			case REGIONS:
			case REMOVE:
			case RENAME:
			case RESAMPLE:
			case RESOURCE:
			case REPLACE:
			case REVOKE:
			case ROLE:
			case ROUND:
			case RUNNING:
			case SCHEMA:
			case SELECT:
			case SERIESSLOTID:
			case SESSION:
			case SET:
			case SETTLE:
			case SGLEVEL:
			case SHOW:
			case SLIMIT:
			case SOFFSET:
			case SPACE:
			case STORAGE:
			case START:
			case STARTTIME:
			case STATEFUL:
			case STATELESS:
			case STATEMENT:
			case STOP:
			case SUBSTRING:
			case SYSTEM:
			case TAGS:
			case TASK:
			case TEMPLATE:
			case THROTTLE:
			case TIMEOUT:
			case TIMESERIES:
			case TIMESLOTID:
			case TO:
			case TOLERANCE:
			case TOP:
			case TRACING:
			case TRAILS:
			case TRIGGER:
			case TRIGGERS:
			case TTL:
			case UNLINK:
			case UNLOAD:
			case UNSET:
			case UPDATE:
			case UPSERT:
			case URI:
			case USER:
			case USING:
			case VALUES:
			case VARIATION:
			case VERIFY:
			case VERSION:
			case VIEW:
			case WHERE:
			case WITH:
			case WITHOUT:
			case WRITABLE:
			case WHEN:
			case THEN:
			case ELSE:
			case PRIVILEGE_VALUE:
			case DEVICEID:
				enterOuterAlt(_localctx, 1);
				{
				setState(4);
				keyWords();
				}
				break;
			case DURATION_LITERAL:
				enterOuterAlt(_localctx, 2);
				{
				setState(5);
				match(DURATION_LITERAL);
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 3);
				{
				setState(6);
				match(ID);
				}
				break;
			case QUOTED_ID:
				enterOuterAlt(_localctx, 4);
				{
				setState(7);
				match(QUOTED_ID);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class KeyWordsContext extends ParserRuleContext {
		public TerminalNode ADD() { return getToken(IdentifierParser.ADD, 0); }
		public TerminalNode AFTER() { return getToken(IdentifierParser.AFTER, 0); }
		public TerminalNode ALIAS() { return getToken(IdentifierParser.ALIAS, 0); }
		public TerminalNode ALIGN() { return getToken(IdentifierParser.ALIGN, 0); }
		public TerminalNode ALIGNED() { return getToken(IdentifierParser.ALIGNED, 0); }
		public TerminalNode ALL() { return getToken(IdentifierParser.ALL, 0); }
		public TerminalNode ALTER() { return getToken(IdentifierParser.ALTER, 0); }
		public TerminalNode ANY() { return getToken(IdentifierParser.ANY, 0); }
		public TerminalNode APPEND() { return getToken(IdentifierParser.APPEND, 0); }
		public TerminalNode AS() { return getToken(IdentifierParser.AS, 0); }
		public TerminalNode ASC() { return getToken(IdentifierParser.ASC, 0); }
		public TerminalNode ATTRIBUTES() { return getToken(IdentifierParser.ATTRIBUTES, 0); }
		public TerminalNode AUTO() { return getToken(IdentifierParser.AUTO, 0); }
		public TerminalNode BEFORE() { return getToken(IdentifierParser.BEFORE, 0); }
		public TerminalNode BEGIN() { return getToken(IdentifierParser.BEGIN, 0); }
		public TerminalNode BLOCKED() { return getToken(IdentifierParser.BLOCKED, 0); }
		public TerminalNode BOUNDARY() { return getToken(IdentifierParser.BOUNDARY, 0); }
		public TerminalNode BY() { return getToken(IdentifierParser.BY, 0); }
		public TerminalNode CACHE() { return getToken(IdentifierParser.CACHE, 0); }
		public TerminalNode CAST() { return getToken(IdentifierParser.CAST, 0); }
		public TerminalNode CHILD() { return getToken(IdentifierParser.CHILD, 0); }
		public TerminalNode CLEAR() { return getToken(IdentifierParser.CLEAR, 0); }
		public TerminalNode CLUSTER() { return getToken(IdentifierParser.CLUSTER, 0); }
		public TerminalNode CONCAT() { return getToken(IdentifierParser.CONCAT, 0); }
		public TerminalNode CONDITION() { return getToken(IdentifierParser.CONDITION, 0); }
		public TerminalNode CONFIGNODES() { return getToken(IdentifierParser.CONFIGNODES, 0); }
		public TerminalNode CONFIGURATION() { return getToken(IdentifierParser.CONFIGURATION, 0); }
		public TerminalNode CONTINUOUS() { return getToken(IdentifierParser.CONTINUOUS, 0); }
		public TerminalNode COUNT() { return getToken(IdentifierParser.COUNT, 0); }
		public TerminalNode CONTAIN() { return getToken(IdentifierParser.CONTAIN, 0); }
		public TerminalNode CQ() { return getToken(IdentifierParser.CQ, 0); }
		public TerminalNode CQS() { return getToken(IdentifierParser.CQS, 0); }
		public TerminalNode CREATE() { return getToken(IdentifierParser.CREATE, 0); }
		public TerminalNode DATA() { return getToken(IdentifierParser.DATA, 0); }
		public TerminalNode DATABASE() { return getToken(IdentifierParser.DATABASE, 0); }
		public TerminalNode DATABASES() { return getToken(IdentifierParser.DATABASES, 0); }
		public TerminalNode DATANODEID() { return getToken(IdentifierParser.DATANODEID, 0); }
		public TerminalNode DATANODES() { return getToken(IdentifierParser.DATANODES, 0); }
		public TerminalNode DEACTIVATE() { return getToken(IdentifierParser.DEACTIVATE, 0); }
		public TerminalNode DEBUG() { return getToken(IdentifierParser.DEBUG, 0); }
		public TerminalNode DELETE() { return getToken(IdentifierParser.DELETE, 0); }
		public TerminalNode DESC() { return getToken(IdentifierParser.DESC, 0); }
		public TerminalNode DESCRIBE() { return getToken(IdentifierParser.DESCRIBE, 0); }
		public TerminalNode DEVICE() { return getToken(IdentifierParser.DEVICE, 0); }
		public TerminalNode DEVICEID() { return getToken(IdentifierParser.DEVICEID, 0); }
		public TerminalNode DEVICES() { return getToken(IdentifierParser.DEVICES, 0); }
		public TerminalNode DETAILS() { return getToken(IdentifierParser.DETAILS, 0); }
		public TerminalNode DISABLE() { return getToken(IdentifierParser.DISABLE, 0); }
		public TerminalNode DISCARD() { return getToken(IdentifierParser.DISCARD, 0); }
		public TerminalNode DROP() { return getToken(IdentifierParser.DROP, 0); }
		public TerminalNode ELAPSEDTIME() { return getToken(IdentifierParser.ELAPSEDTIME, 0); }
		public TerminalNode ELSE() { return getToken(IdentifierParser.ELSE, 0); }
		public TerminalNode END() { return getToken(IdentifierParser.END, 0); }
		public TerminalNode ENDTIME() { return getToken(IdentifierParser.ENDTIME, 0); }
		public TerminalNode EVERY() { return getToken(IdentifierParser.EVERY, 0); }
		public TerminalNode EXPLAIN() { return getToken(IdentifierParser.EXPLAIN, 0); }
		public TerminalNode FILL() { return getToken(IdentifierParser.FILL, 0); }
		public TerminalNode FILE() { return getToken(IdentifierParser.FILE, 0); }
		public TerminalNode FLUSH() { return getToken(IdentifierParser.FLUSH, 0); }
		public TerminalNode FOR() { return getToken(IdentifierParser.FOR, 0); }
		public TerminalNode FROM() { return getToken(IdentifierParser.FROM, 0); }
		public TerminalNode FULL() { return getToken(IdentifierParser.FULL, 0); }
		public TerminalNode FUNCTION() { return getToken(IdentifierParser.FUNCTION, 0); }
		public TerminalNode FUNCTIONS() { return getToken(IdentifierParser.FUNCTIONS, 0); }
		public TerminalNode GLOBAL() { return getToken(IdentifierParser.GLOBAL, 0); }
		public TerminalNode GRANT() { return getToken(IdentifierParser.GRANT, 0); }
		public TerminalNode GROUP() { return getToken(IdentifierParser.GROUP, 0); }
		public TerminalNode HAVING() { return getToken(IdentifierParser.HAVING, 0); }
		public TerminalNode INDEX() { return getToken(IdentifierParser.INDEX, 0); }
		public TerminalNode INFO() { return getToken(IdentifierParser.INFO, 0); }
		public TerminalNode INSERT() { return getToken(IdentifierParser.INSERT, 0); }
		public TerminalNode INTO() { return getToken(IdentifierParser.INTO, 0); }
		public TerminalNode KILL() { return getToken(IdentifierParser.KILL, 0); }
		public TerminalNode LABEL() { return getToken(IdentifierParser.LABEL, 0); }
		public TerminalNode LAST() { return getToken(IdentifierParser.LAST, 0); }
